
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int FILE ;


 int fread (char*,int,int,int *) ;
 int pclose (int *) ;
 int * popen (char*,char*) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strtoull (char*,int *,int) ;

uint64_t kernel_symbol(char* sym){
  char cmd[1024];
  strcpy(cmd, "nm -g /mach_kernel | grep ");
  strcat(cmd, sym);
  strcat(cmd, " | cut -d' ' -f1");
  FILE* f = popen(cmd, "r");
  char offset_str[17];
  fread(offset_str, 16, 1, f);
  pclose(f);
  offset_str[16] = '\x00';

  uint64_t offset = strtoull(offset_str, ((void*)0), 16);
  return offset;
}
